--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <div>
         <header>
           <div class="left">
-            <img src="/picture/logo.JPG" width="100px" height="90px" style="border-radius: 50%; margin-right: 10px;" />
+            <img src="./picture/logo.JPG" width="100px" height="90px" style="border-radius: 50%; margin-right: 10px;" />
             <h3>Homely <a id="decor">Decor</a></h3>
           </div>
       
@@ -411,7 +411,7 @@
       <a href="#" onclick="addToCart(this); return false;"><p>Add to cart</p></a>
     </div>
     
-    <div class="np5" data-name="Product 5" data-price="1299.99" data-image="/picture/npbed.JPG">
+    <div class="np5" data-name="Product 5" data-price="1299.99" data-image="./picture/npbed.JPG">
       <a href="prod-modal.html" onclick="openModal(this.parentElement); return false;">
         <img src="./picture/npbed.JPG" width="136px" height="150px">
         <p style="color: white;">Product 5</p>
@@ -476,7 +476,7 @@
 
     <div class="np6" data-name="Elegant Quartz Dining Table" data-price="2999.99" data-image="./picture/fpdining.JPG">
       <a href="prod-modal.html" onclick="openModal(this.parentElement); return false;">
-        <img src="/picture/fpdining.JPG" width="136px" height="150px">
+        <img src="./picture/fpdining.JPG" width="136px" height="150px">
         <p style="color: white;">Elegant Quartz Dini...</p>
       </a>
       <a href="#" onclick="addToCart(this); return false;"><p>Add to cart</p></a>
