--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <div class="search-bar">
               <input type="text" id="searchInput" placeholder="Search...">
               <button onclick="handleSearch()">
-                <img src="https://cdn-icons-png.flaticon.com/512/622/622669.png" alt="Search" />
+                <img src="./https://cdn-icons-png.flaticon.com/512/622/622669.png" alt="Search" />
               </button>
             </div>
             <a href="profile.html" id="profile">
