--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <div>
         <header>
           <div class="left">
-            <img src="/picture/logo.JPG" width="100px" height="90px" style="border-radius: 50%; margin-right: 10px;" />
+            <img src="./picture/logo.JPG" width="100px" height="90px" style="border-radius: 50%; margin-right: 10px;" />
             <h3>Homely <a id="decor">Decor</a></h3>
           </div>
       
@@ -283,7 +283,7 @@
             <a href="profile.html" id="profile">
               <img src="" width="36px" height="36px" />
             </a>
-            <a href="cart.html"><img src="/picture/pngimg.com - shopping_cart_PNG10.png" width="36px" height="36px" /></a>
+            <a href="cart.html"><img src="./picture/pngimg.com - shopping_cart_PNG10.png" width="36px" height="36px" /></a>
       
             <!-- Hamburger menu -->
             <button class="menu-toggle" onclick="toggleNav()">☰</button>
@@ -319,7 +319,7 @@
 
 <div class="carousel-container" style="position: relative; margin-top: 30px; overflow: hidden; width: 100%; height: 270px;">
   <div class="carousel-track" style="display: flex; transition: transform 0.5s ease;">
-    <img src="/picture/carouselh.JPG" style="flex-shrink: 0; width: 100%; height: 270px;">
+    <img src="./picture/carouselh.JPG" style="flex-shrink: 0; width: 100%; height: 270px;">
     <img src="/picture/carousel2.JPG" style="flex-shrink: 0; width: 100%; height: 270px;">
     <img src="/picture/carousel3.JPG" style="flex-shrink: 0; width: 100%; height: 270px;">
   </div>
